Fix horizontal scrolling background on pre

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -41,7 +41,7 @@
   --border-radius: 0;
 }
 
-h1 a:hover {
+h2 a:hover {
   text-decoration: none;
 }
 
@@ -58,6 +58,7 @@ article {
   --block-spacing-horizontal: calc(var(--spacing)*4);
 }
 
-pre {
+pre,
+div.sourceCode {
   background-color: #0d1419;
 }
